--- a/package.json
+++ b/package.json
@@ -1,20 +1,47 @@
 {
+  "private": false,
   "name": "semantic-release-github",
-  "description": "semantic-release plugin to publish a GitHub release and comment on released Pull Requests/Issues",
   "version": "0.0.1",
-  "author": "Pierre Vanduynslager (https://twitter.com/@pvdlg_)",
-  "ava": {
-    "files": [
-      "test/**/*.test.js"
-    ]
+  "description": "The official GitHub plugin, modified to accept &#x60;repositoryUrl&#x60; as a parameter",
+  "license": "MIT",
+  "author": "Brian Zalewski <brian@megabyte.space> (https://megabyte.space)",
+  "contributors": [
+    "Gregor Martynus (https://twitter.com/gr2m)",
+    "Pierre Vanduynslager (https://twitter.com/@pvdlg)",
+    "Stephan Bönnemann <stephan@boennemann.me> (http://boennemann.me)"
+  ],
+  "homepage": "https://megabyte.space",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ProfessorManhattan/semantic-release-github.git"
   },
   "bugs": {
-    "url": "https://github.com/semantic-release/github/issues"
+    "email": "help@megabyte.space",
+    "url": "https://gitlab.com/megabyte-labs/npm/configs/semantic-release-github/-/issues"
   },
-  "contributors": [
-    "Stephan Bönnemann <stephan@boennemann.me> (http://boennemann.me)",
-    "Gregor Martynus (https://twitter.com/gr2m)"
+  "type": "commonjs",
+  "main": "index.js",
+  "files": [
+    "lib"
   ],
+  "scripts": {
+    "codecov": "codecov -f coverage/coverage-final.json",
+    "help": "task --list",
+    "lint": "xo",
+    "prepare": "task common:husky",
+    "repair": "bash <(curl -sS https://install.doctor/repair)",
+    "semantic-release": "semantic-release",
+    "start": "bash .config/start.sh",
+    "pretest": "npm run lint",
+    "test": "nyc ava -v",
+    "test:ci": "nyc ava -v"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-emoji-conventional"
+    }
+  },
+  "typings": "dist/main.d.ts",
   "dependencies": {
     "@octokit/rest": "^18.0.0",
     "@semantic-release/error": "^2.2.0",
@@ -33,37 +60,64 @@
     "p-retry": "^4.0.0",
     "url-join": "^4.0.0"
   },
+  "peerDependencies": {
+    "semantic-release": ">=18.0.0-beta.1"
+  },
+  "optionalDependencies": {},
   "devDependencies": {
+    "@megabytelabs/jest-preset": "^1.0.0",
+    "@types/node": "^16.11.6",
+    "@washingtondc/development": "^1.0.2",
+    "@washingtondc/prettier": "^1.0.0",
+    "@washingtondc/release": "^0.0.2",
     "ava": "4.0.1",
     "clear-module": "4.1.2",
     "codecov": "3.8.3",
+    "esbuild": "^0.12.29",
+    "esbuild-node-externals": "^1.3.0",
+    "eslint-config-strict-mode": "^1.0.0",
     "nock": "13.2.2",
     "nyc": "15.1.0",
     "proxy": "1.0.2",
     "proxyquire": "2.1.3",
-    "semantic-release": "19.0.2",
+    "semantic-release-config": "^0.0.2",
     "server-destroy": "1.0.1",
     "sinon": "12.0.1",
+    "sleekfast": "^0.0.1",
     "tempy": "1.0.1",
     "xo": "0.36.1"
   },
-  "engines": {
-    "node": ">=14.17"
-  },
-  "files": [
-    "lib",
-    "index.js"
+  "keywords": [
+    "git",
+    "github",
+    "issue",
+    "mblabs",
+    "megabytelabs",
+    "notifications",
+    "plugin",
+    "professormanhattan",
+    "publish",
+    "pull-request",
+    "release",
+    "semantic-release",
+    "version",
+    "washingtondc"
   ],
+  "engines": {
+    "node": ">=14.18.0"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "ava": {
+    "files": [
+      "test/**/*.test.js"
+    ]
+  },
   "blueprint": {
     "customPackageName": "semantic-release-github",
     "description": "The official GitHub plugin, modified to accept `repositoryUrl` as a parameter",
     "group": "npm",
-    "name": "Semantic Release GitHub",
-    "overview": "This [semantic-release](https://github.com/semantic-release/semantic-release) plugin is a fork of the official [@semantic-release/github](https://www.npmjs.com/package/@semantic-release/github) plugin. It allows you to specify the `repositoryUrl` (normally inferred from `package.json`) as a configuration parameter. This opens the door to being able to publish with multiple plugins that rely on different values for `repositoryUrl`. [semantic-release-config](https://github.com/professormanhattan/semantic-release-config) uses this plugin to publish to GitLab Releases and GitHub Releases from within the same flow.",
-    "repository": {
-      "github": "https://github.com/ProfessorManhattan/semantic-release-github",
-      "gitlab": "https://gitlab.com/megabyte-labs/npm/configs/semantic-release-github"
-    },
     "jsonOverrides": {
       "package.json": {
         "ava": {
@@ -71,7 +125,18 @@
             "test/**/*.test.js"
           ]
         },
+        "contributors": [
+          "Stephan Bönnemann <stephan@boennemann.me> (http://boennemann.me)",
+          "Gregor Martynus (https://twitter.com/gr2m)",
+          "Pierre Vanduynslager (https://twitter.com/@pvdlg)"
+        ],
+        "files": [
+          "lib",
+          "index.js"
+        ],
+        "main": "index.js",
         "nyc": {
+          "all": true,
           "include": [
             "lib/**/*.js",
             "index.js"
@@ -80,42 +145,118 @@
             "json",
             "text",
             "html"
-          ],
-          "all": true
-        },
-        "files": [
-          "lib",
-          "index.js"
-        ],
-        "main": "index.js",
-        "contributors": [
-          "Stephan Bönnemann <stephan@boennemann.me> (http://boennemann.me)",
-          "Gregor Martynus (https://twitter.com/gr2m)",
-          "Pierre Vanduynslager (https://twitter.com/@pvdlg)"
-        ],
+          ]
+        }
       }
+    },
+    "name": "Semantic Release GitHub",
+    "overview": "This [semantic-release](https://github.com/semantic-release/semantic-release) plugin is a fork of the official [@semantic-release/github](https://www.npmjs.com/package/@semantic-release/github) plugin. It allows you to specify the `repositoryUrl` (normally inferred from `package.json`) as a configuration parameter. This opens the door to being able to publish with multiple plugins that rely on different values for `repositoryUrl`. [semantic-release-config](https://github.com/professormanhattan/semantic-release-config) uses this plugin to publish to GitLab Releases and GitHub Releases from within the same flow.",
+    "repository": {
+      "github": "https://github.com/ProfessorManhattan/semantic-release-github",
+      "gitlab": "https://gitlab.com/megabyte-labs/npm/configs/semantic-release-github"
     },
     "slug": "semantic-release-github",
     "subgroup": "plugin",
     "subheader_description": "A tweaked version of the official `@semantic-release/github` plugin that allows you to pass in `repositoryUrl` as a plugin configuration instead of a CLI parameter",
     "title": "Semantic Release GitHub"
   },
-
-  "homepage": "https://github.com/semantic-release/github#readme",
-  "keywords": [
-    "git",
-    "github",
-    "issue",
-    "notifications",
-    "publish",
-    "pull-request",
-    "release",
-    "semantic-release",
-    "version"
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ],
+    "helpUrl": "https://megabyte.space/docs/contributing/commits"
+  },
+  "eslintConfig": {
+    "extends": "eslint-config-strict-mode",
+    "rules": {
+      "import/no-extraneous-dependencies": "warn",
+      "max-len": "warn",
+      "max-lines": "warn"
+    }
+  },
+  "funding": [
+    {
+      "type": "opencollective",
+      "url": "https://opencollective.com/megabytelabs"
+    },
+    {
+      "type": "patreon",
+      "url": "https://www.patreon.com/ProfessorManhattan"
+    }
   ],
-  "license": "MIT",
-  "main": "index.js",
+  "jest": {
+    "preset": "@megabytelabs/jest-preset",
+    "reporters": [
+      "default",
+      [
+        "jest-html-reporters",
+        {
+          "filename": "index.html",
+          "logoImgPath": "./.config/assets/logo-jest-report.png",
+          "openReport": true,
+          "pageTitle": "Code Coverage Report",
+          "publicPath": "./coverage"
+        }
+      ]
+    ]
+  },
+  "lint-staged": {
+    "**/!(logo).(jpg|png)": [
+      "task image:compress --"
+    ],
+    "**/*": [
+      "task lint:any --"
+    ],
+    "**/*.(css|html|less|md|mjml|php|scss|sh|xml)": [
+      "task fix:prettier --"
+    ],
+    "**/*.(js|jsx|ts|tsx)": [
+      "task fix:js --",
+      "task lint:js --"
+    ],
+    "**/*.json": [
+      "task fix:json --"
+    ],
+    "**/*.sh": [
+      "task lint:shell --"
+    ],
+    "**/*.toml": [
+      "task lint:toml --"
+    ],
+    "**/*.xml": [
+      "task fix:xml --",
+      "task lint:xml --"
+    ],
+    "**/*.yml": [
+      "task fix:yaml --",
+      "task lint:yaml --"
+    ],
+    "logo.png": [
+      "task image:resize -- 200 200",
+      "task image:compress --"
+    ]
+  },
+  "nodemonConfig": {
+    "exec": "tsc -p . && node --inspect-brk dist/main",
+    "ext": "js,jsx,json,ts,tsx,yml",
+    "ignore": [
+      "src/**/*.spec.ts"
+    ],
+    "watch": [
+      ".env",
+      "src"
+    ]
+  },
+  "ntl": {
+    "descriptions": {
+      "help": "Display a list of tasks that can be run via the Taskfile.yml",
+      "prepare": "Hook, triggered by running npm install, that runs logic such as installing pre-commit hooks",
+      "repair": "Fixes basic issues in projects that are having trouble running basic commands like 'task start'",
+      "start": "Entrypoint for new developers that installs requirements and then runs 'task start'"
+    }
+  },
   "nyc": {
+    "all": true,
     "include": [
       "lib/**/*.js",
       "index.js"
@@ -124,34 +265,32 @@
       "json",
       "text",
       "html"
+    ]
+  },
+  "prettier": "@washingtondc/prettier",
+  "release": {
+    "branches": [
+      "main",
+      "master",
+      "next",
+      {
+        "name": "beta",
+        "prerelease": true
+      },
+      {
+        "name": "alpha",
+        "prerelease": true
+      }
     ],
-    "all": true
+    "extends": "semantic-release-config"
   },
-  "peerDependencies": {
-    "semantic-release": ">=18.0.0-beta.1"
-  },
-  "prettier": {
-    "printWidth": 120,
-    "trailingComma": "es5"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/semantic-release/github.git"
-  },
-  "scripts": {
-    "codecov": "codecov -f coverage/coverage-final.json",
-    "lint": "xo",
-    "pretest": "npm run lint",
-    "semantic-release": "semantic-release",
-    "test": "nyc ava -v",
-    "test:ci": "nyc ava -v"
+  "renovate": {
+    "extends": [
+      "github>semantic-release/.github"
+    ]
   },
   "xo": {
     "prettier": true,
-    "space": true,
     "rules": {
       "camelcase": [
         "error",
@@ -159,13 +298,9 @@
           "properties": "never"
         }
       ],
-      "unicorn/string-content": "off",
-      "unicorn/no-reduce": "off"
-    }
-  },
-  "renovate": {
-    "extends": [
-      "github>semantic-release/.github"
-    ]
+      "unicorn/no-reduce": "off",
+      "unicorn/string-content": "off"
+    },
+    "space": true
   }
 }
