♻️ refactor(latest): latest

--- a/package.json
+++ b/package.json
@@ -171,7 +171,68 @@
     "rules": {
       "import/no-extraneous-dependencies": "warn",
       "max-len": "warn",
-      "max-lines": "warn"
+      "max-lines": "warn",
+      "@typescript-eslint/no-unused-vars": "warn",
+      "@typescript-eslint/no-var-requires": "warn",
+      "array-func/prefer-flat": "warn",
+      "camelcase": "warn",
+      "capitalized-comments": "warn",
+      "filenames/no-index": "warn",
+      "fp/no-mutating-methods": "warn",
+      "fp/no-mutation": "warn",
+      "fp/no-proxy": "warn",
+      "fp/no-rest-parameters": "warn",
+      "fp/no-throw": "warn",
+      "functional/immutable-data": "warn",
+      "functional/no-let": "warn",
+      "functional/no-throw-statement": "warn",
+      "functional/no-try-statement": "warn",
+      "id-blacklist": "warn",
+      "id-length": "warn",
+      "init-declarations": "warn",
+      "jsdoc/check-param-names": "warn",
+      "jsdoc/check-tag-names": "warn",
+      "jsdoc/check-types": "warn",
+      "jsdoc/require-jsdoc": "warn",
+      "jsdoc/require-returns": "warn",
+      "jsdoc/tag-lines": "warn",
+      "line-comment-position": "warn",
+      "max-lines-per-function": "warn",
+      "max-params": "warn",
+      "max-statements": "warn",
+      "multiline-comment-style": "warn",
+      "no-inline-comments": "warn",
+      "no-magic-numbers": "warn",
+      "no-redeclare": "warn",
+      "no-secrets/no-secrets": "warn",
+      "no-shadow": "warn",
+      "no-undefined": "warn",
+      "no-unused-vars": "warn",
+      "no-warning-comments": "warn",
+      "node/no-missing-require": "warn",
+      "padding-line-between-statements": "warn",
+      "prettier/prettier": "warn",
+      "regexp/no-super-linear-backtracking": "warn",
+      "require-await": "warn",
+      "require-jsdoc": "warn",
+      "require-unicode-regexp": "warn",
+      "security/detect-object-injection": "warn",
+      "security/detect-unsafe-regex": "warn",
+      "sonarjs/cognitive-complexity": "warn",
+      "sonarjs/no-duplicate-string": "warn",
+      "sonarjs/no-nested-template-literals": "warn",
+      "sort-keys-fix/sort-keys-fix": "warn",
+      "unicorn/error-message": "warn",
+      "unicorn/no-array-reduce": "warn",
+      "unicorn/no-null": "warn",
+      "unicorn/prefer-array-flat": "warn",
+      "unicorn/prefer-array-some": "warn",
+      "unicorn/prefer-includes": "warn",
+      "unicorn/prefer-module": "warn",
+      "unicorn/prefer-number-properties": "warn",
+      "unicorn/prefer-spread": "warn",
+      "unicorn/prevent-abbreviations": "warn",
+      "yml/sort-keys": "warn"
     }
   },
   "funding": [
