--- a/package.json
+++ b/package.json
@@ -1,113 +1,5 @@
 {
-  "private": false,
-  "name": "semantic-release-github",
-  "version": "0.0.1",
-  "description": "The official GitHub plugin, modified to accept &#x60;repositoryUrl&#x60; as a parameter",
-  "license": "MIT",
   "author": "Brian Zalewski <brian@megabyte.space> (https://megabyte.space)",
-  "contributors": [
-    "Gregor Martynus (https://twitter.com/gr2m)",
-    "Pierre Vanduynslager (https://twitter.com/@pvdlg)",
-    "Stephan Bönnemann <stephan@boennemann.me> (http://boennemann.me)"
-  ],
-  "homepage": "https://megabyte.space",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ProfessorManhattan/semantic-release-github.git"
-  },
-  "bugs": {
-    "email": "help@megabyte.space",
-    "url": "https://gitlab.com/megabyte-labs/npm/configs/semantic-release-github/-/issues"
-  },
-  "type": "commonjs",
-  "main": "index.js",
-  "files": [
-    "lib"
-  ],
-  "scripts": {
-    "codecov": "codecov -f coverage/coverage-final.json",
-    "help": "task --list",
-    "lint": "xo",
-    "prepare": "task common:husky",
-    "repair": "bash <(curl -sS https://install.doctor/repair)",
-    "semantic-release": "semantic-release",
-    "start": "bash .config/start.sh",
-    "pretest": "npm run lint",
-    "test": "nyc ava -v",
-    "test:ci": "nyc ava -v"
-  },
-  "config": {
-    "commitizen": {
-      "path": "node_modules/cz-emoji-conventional"
-    }
-  },
-  "typings": "dist/main.d.ts",
-  "dependencies": {
-    "@octokit/rest": "^18.0.0",
-    "@semantic-release/error": "^2.2.0",
-    "aggregate-error": "^3.0.0",
-    "bottleneck": "^2.18.1",
-    "debug": "^4.0.0",
-    "dir-glob": "^3.0.0",
-    "fs-extra": "^10.0.0",
-    "globby": "^11.0.0",
-    "http-proxy-agent": "^5.0.0",
-    "https-proxy-agent": "^5.0.0",
-    "issue-parser": "^6.0.0",
-    "lodash": "^4.17.4",
-    "mime": "^3.0.0",
-    "p-filter": "^2.0.0",
-    "p-retry": "^4.0.0",
-    "url-join": "^4.0.0"
-  },
-  "peerDependencies": {
-    "semantic-release": ">=18.0.0-beta.1"
-  },
-  "devDependencies": {
-    "@megabytelabs/jest-preset": "^1.0.0",
-    "@types/node": "^16.11.6",
-    "@washingtondc/development": "^1.0.2",
-    "@washingtondc/prettier": "^1.0.0",
-    "@washingtondc/release": "^0.0.2",
-    "ava": "4.0.1",
-    "clear-module": "4.1.2",
-    "codecov": "3.8.3",
-    "esbuild": "^0.12.29",
-    "esbuild-node-externals": "^1.3.0",
-    "eslint-config-strict-mode": "^1.0.28",
-    "nock": "13.2.2",
-    "nyc": "15.1.0",
-    "proxy": "1.0.2",
-    "proxyquire": "2.1.3",
-    "semantic-release-config": "^0.0.4",
-    "server-destroy": "1.0.1",
-    "sinon": "12.0.1",
-    "sleekfast": "^0.0.1",
-    "tempy": "1.0.1",
-    "xo": "0.36.1"
-  },
-  "keywords": [
-    "git",
-    "github",
-    "issue",
-    "mblabs",
-    "megabytelabs",
-    "notifications",
-    "plugin",
-    "professormanhattan",
-    "publish",
-    "pull-request",
-    "release",
-    "semantic-release",
-    "version",
-    "washingtondc"
-  ],
-  "engines": {
-    "node": ">=14.18.0"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
   "ava": {
     "files": [
       "test/**/*.test.js"
@@ -159,18 +51,74 @@
     "subheader_description": "A tweaked version of the official `@semantic-release/github` plugin that allows you to pass in `repositoryUrl` as a plugin configuration instead of a CLI parameter",
     "title": "Semantic Release GitHub"
   },
+  "bugs": {
+    "email": "help@megabyte.space",
+    "url": "https://gitlab.com/megabyte-labs/npm/configs/semantic-release-github/-/issues"
+  },
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
     ],
     "helpUrl": "https://megabyte.space/docs/contributing/commits"
   },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-emoji-conventional"
+    }
+  },
+  "contributors": [
+    "Stephan Bönnemann <stephan@boennemann.me> (http://boennemann.me)",
+    "Gregor Martynus (https://twitter.com/gr2m)",
+    "Pierre Vanduynslager (https://twitter.com/@pvdlg)"
+  ],
+  "dependencies": {
+    "@octokit/rest": "^18.0.0",
+    "@semantic-release/error": "^2.2.0",
+    "aggregate-error": "^3.0.0",
+    "bottleneck": "^2.18.1",
+    "debug": "^4.0.0",
+    "dir-glob": "^3.0.0",
+    "fs-extra": "^10.0.0",
+    "globby": "^11.0.0",
+    "http-proxy-agent": "^5.0.0",
+    "https-proxy-agent": "^5.0.0",
+    "issue-parser": "^6.0.0",
+    "lodash": "^4.17.4",
+    "mime": "^3.0.0",
+    "p-filter": "^2.0.0",
+    "p-retry": "^4.0.0",
+    "url-join": "^4.0.0"
+  },
+  "description": "The official GitHub plugin, modified to accept &#x60;repositoryUrl&#x60; as a parameter",
+  "devDependencies": {
+    "@megabytelabs/jest-preset": "^1.0.0",
+    "@types/node": "^16.11.6",
+    "@washingtondc/development": "^1.0.2",
+    "@washingtondc/prettier": "^1.0.0",
+    "@washingtondc/release": "^0.0.2",
+    "ava": "4.0.1",
+    "clear-module": "4.1.2",
+    "codecov": "3.8.3",
+    "esbuild": "^0.12.29",
+    "esbuild-node-externals": "^1.3.0",
+    "eslint-config-strict-mode": "^1.0.0",
+    "nock": "13.2.2",
+    "nyc": "15.1.0",
+    "proxy": "1.0.2",
+    "proxyquire": "2.1.3",
+    "semantic-release-config": "^0.0.2",
+    "server-destroy": "1.0.1",
+    "sinon": "12.0.1",
+    "sleekfast": "^0.0.1",
+    "tempy": "1.0.1",
+    "xo": "0.36.1"
+  },
+  "engines": {
+    "node": ">=14.18.0"
+  },
   "eslintConfig": {
     "extends": "eslint-config-strict-mode",
     "rules": {
-      "import/no-extraneous-dependencies": "warn",
-      "max-len": "warn",
-      "max-lines": "warn",
       "@typescript-eslint/no-unused-vars": "warn",
       "@typescript-eslint/no-var-requires": "warn",
       "array-func/prefer-flat": "warn",
@@ -188,6 +136,7 @@
       "functional/no-try-statement": "warn",
       "id-blacklist": "warn",
       "id-length": "warn",
+      "import/no-extraneous-dependencies": "warn",
       "init-declarations": "warn",
       "jsdoc/check-param-names": "warn",
       "jsdoc/check-tag-names": "warn",
@@ -196,6 +145,8 @@
       "jsdoc/require-returns": "warn",
       "jsdoc/tag-lines": "warn",
       "line-comment-position": "warn",
+      "max-len": "warn",
+      "max-lines": "warn",
       "max-lines-per-function": "warn",
       "max-params": "warn",
       "max-statements": "warn",
@@ -234,6 +185,10 @@
       "yml/sort-keys": "warn"
     }
   },
+  "files": [
+    "lib",
+    "index.js"
+  ],
   "funding": [
     {
       "type": "opencollective",
@@ -244,6 +199,7 @@
       "url": "https://www.patreon.com/ProfessorManhattan"
     }
   ],
+  "homepage": "https://megabyte.space",
   "jest": {
     "preset": "@megabytelabs/jest-preset",
     "reporters": [
@@ -260,6 +216,23 @@
       ]
     ]
   },
+  "keywords": [
+    "git",
+    "github",
+    "issue",
+    "mblabs",
+    "megabytelabs",
+    "notifications",
+    "plugin",
+    "professormanhattan",
+    "publish",
+    "pull-request",
+    "release",
+    "semantic-release",
+    "version",
+    "washingtondc"
+  ],
+  "license": "MIT",
   "lint-staged": {
     "**/!(logo).(jpg|png)": [
       "task image:compress --"
@@ -296,6 +269,8 @@
       "task image:compress --"
     ]
   },
+  "main": "index.js",
+  "name": "semantic-release-github",
   "nodemonConfig": {
     "exec": "tsc -p . && node --inspect-brk dist/main",
     "ext": "js,jsx,json,ts,tsx,yml",
@@ -327,7 +302,15 @@
       "html"
     ]
   },
+  "optionalDependencies": {},
+  "peerDependencies": {
+    "semantic-release": ">=18.0.0-beta.1"
+  },
   "prettier": "@washingtondc/prettier",
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "release": {
     "branches": [
       "main",
@@ -349,6 +332,25 @@
       "github>semantic-release/.github"
     ]
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ProfessorManhattan/semantic-release-github.git"
+  },
+  "scripts": {
+    "codecov": "codecov -f coverage/coverage-final.json",
+    "help": "task --list",
+    "lint": "xo",
+    "prepare": "task common:husky",
+    "pretest": "npm run lint",
+    "repair": "bash <(curl -sS https://install.doctor/repair)",
+    "semantic-release": "semantic-release",
+    "start": "bash .config/start.sh",
+    "test": "nyc ava -v",
+    "test:ci": "nyc ava -v"
+  },
+  "type": "commonjs",
+  "typings": "dist/main.d.ts",
+  "version": "0.0.1",
   "xo": {
     "prettier": true,
     "rules": {
