--- a/.config/taskfiles/npm/Taskfile.yml
+++ b/.config/taskfiles/npm/Taskfile.yml
@@ -30,9 +30,9 @@ tasks:
       - :install:modules:local
       - :install:npm:esbuild
     log:
+      error: Error running `esbuild` (config -> ./.config/esbuild/bundled.js)
       start: Running `esbuild` with bundle script (config -> ./.config/esbuild/bundled.js)
       success: Finished running `esbuild` (config -> ./.config/esbuild/bundled.js)
-      error: Error running `esbuild` (config -> ./.config/esbuild/bundled.js)
     cmds:
       - node .config/esbuild/bundled.js
         .config/log success 'Finished running `esbuild` with bundle script'
@@ -42,9 +42,9 @@ tasks:
       - :install:modules:local
       - :install:npm:esbuild
     log:
+      error: Error running `esbuild` (config -> ./.config/esbuild/minified.js)
       start: Running `esbuild` with minify script (config -> ./.config/esbuild/minified.js)
       success: Finished running `esbuild with minify script (config -> ./.config/esbuild/minified.js)
-      error: Error running `esbuild` (config -> ./.config/esbuild/minified.js)
     cmds:
       - |
         .config/log info 'Running `esbuild` with minify script (`./.config/esbuild/minified.js`)'
@@ -92,7 +92,7 @@ tasks:
           NPM_PACKAGE_VERSION: '{{.NPM_PACKAGE_VERSION}}'
           SYSTEM: freebsd
       # - task: build:fpm:compile
-      #   vars:
+      #   vVrs:
       #     ARCHITECTURE: amd64
       #     FILE_EXTENSION:
       #     FPM_TARGET: pacman
