--- a/package.json
+++ b/package.json
@@ -132,6 +132,8 @@
         ],
         "files": [
           "lib",
+          "README.md",
+          "LICENSE",
           "index.js"
         ],
         "main": "index.js",
