--- a/package.json
+++ b/package.json
@@ -1,114 +1,5 @@
 {
-  "private": false,
-  "name": "semantic-release-gh",
-  "version": "0.0.2",
-  "description": "The official GitHub plugin, modified to accept repositoryUrl as a parameter",
-  "license": "MIT",
   "author": "Brian Zalewski <brian@megabyte.space> (https://megabyte.space)",
-  "contributors": [
-    "Gregor Martynus (https://twitter.com/gr2m)",
-    "Pierre Vanduynslager (https://twitter.com/@pvdlg)",
-    "Stephan Bönnemann <stephan@boennemann.me> (http://boennemann.me)"
-  ],
-  "homepage": "https://megabyte.space",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ProfessorManhattan/semantic-release-github.git"
-  },
-  "bugs": {
-    "email": "help@megabyte.space",
-    "url": "https://gitlab.com/megabyte-labs/npm/configs/semantic-release-github/-/issues"
-  },
-  "type": "commonjs",
-  "main": "index.js",
-  "files": [
-    "lib"
-  ],
-  "scripts": {
-    "codecov": "codecov -f coverage/coverage-final.json",
-    "help": "task --list",
-    "lint": "xo",
-    "prepare": "task common:husky",
-    "repair": "bash <(curl -sS https://install.doctor/repair)",
-    "semantic-release": "semantic-release",
-    "start": "bash .config/start.sh",
-    "pretest": "npm run lint",
-    "test": "nyc ava -v",
-    "test:ci": "nyc ava -v"
-  },
-  "config": {
-    "commitizen": {
-      "path": "node_modules/cz-emoji-conventional"
-    }
-  },
-  "typings": "dist/main.d.ts",
-  "dependencies": {
-    "@octokit/rest": "^18.0.0",
-    "@semantic-release/error": "^2.2.0",
-    "aggregate-error": "^3.0.0",
-    "bottleneck": "^2.18.1",
-    "debug": "^4.0.0",
-    "dir-glob": "^3.0.0",
-    "fs-extra": "^10.0.0",
-    "globby": "^11.0.0",
-    "http-proxy-agent": "^5.0.0",
-    "https-proxy-agent": "^5.0.0",
-    "issue-parser": "^6.0.0",
-    "lodash": "^4.17.4",
-    "mime": "^3.0.0",
-    "p-filter": "^2.0.0",
-    "p-retry": "^4.0.0",
-    "tslib": "^2.3.1",
-    "url-join": "^4.0.0"
-  },
-  "peerDependencies": {
-    "semantic-release": ">=18.0.0-beta.1"
-  },
-  "devDependencies": {
-    "@megabytelabs/jest-preset": "^1.0.0",
-    "@types/node": "^16.11.6",
-    "@washingtondc/development": "^1.0.2",
-    "@washingtondc/prettier": "^1.0.0",
-    "@washingtondc/release": "^0.0.2",
-    "ava": "4.0.1",
-    "clear-module": "4.1.2",
-    "codecov": "3.8.3",
-    "esbuild": "^0.12.29",
-    "esbuild-node-externals": "^1.3.0",
-    "eslint-config-strict-mode": "^1.0.0",
-    "nock": "13.2.2",
-    "nyc": "15.1.0",
-    "proxy": "1.0.2",
-    "proxyquire": "2.1.3",
-    "semantic-release-config": "^0.0.2",
-    "server-destroy": "1.0.1",
-    "sinon": "12.0.1",
-    "sleekfast": "^0.0.1",
-    "tempy": "1.0.1",
-    "xo": "0.36.1"
-  },
-  "keywords": [
-    "git",
-    "github",
-    "issue",
-    "mblabs",
-    "megabytelabs",
-    "notifications",
-    "plugin",
-    "professormanhattan",
-    "publish",
-    "pull-request",
-    "release",
-    "semantic-release",
-    "version",
-    "washingtondc"
-  ],
-  "engines": {
-    "node": ">=14.18.0"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
   "ava": {
     "files": [
       "test/**/*.test.js"
@@ -117,6 +8,9 @@
   "blueprint": {
     "customPackageName": "semantic-release-gh",
     "description": "The official GitHub plugin, modified to accept repositoryUrl as a parameter",
+    "github_id": "R_kgDOGw3kVA",
+    "gitlab_group_id": "",
+    "gitlab_project_id": "33109332",
     "group": "npm",
     "jsonOverrides": {
       "package.json": {
@@ -160,16 +54,73 @@
     "slug": "semantic-release-github",
     "subgroup": "plugin",
     "subheader_description": "A tweaked version of the official `@semantic-release/github` plugin that allows you to pass in `repositoryUrl` as a plugin configuration instead of a CLI parameter",
-    "title": "Semantic Release GitHub",
-    "github_id": "R_kgDOGw3kVA",
-    "gitlab_project_id": "33109332",
-    "gitlab_group_id": ""
+    "title": "Semantic Release GitHub"
+  },
+  "bugs": {
+    "email": "help@megabyte.space",
+    "url": "https://gitlab.com/megabyte-labs/npm/configs/semantic-release-github/-/issues"
   },
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
     ],
     "helpUrl": "https://megabyte.space/docs/contributing/commits"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-emoji-conventional"
+    }
+  },
+  "contributors": [
+    "Stephan Bönnemann <stephan@boennemann.me> (http://boennemann.me)",
+    "Gregor Martynus (https://twitter.com/gr2m)",
+    "Pierre Vanduynslager (https://twitter.com/@pvdlg)"
+  ],
+  "dependencies": {
+    "@octokit/rest": "^18.0.0",
+    "@semantic-release/error": "^2.2.0",
+    "aggregate-error": "^3.0.0",
+    "bottleneck": "^2.18.1",
+    "debug": "^4.0.0",
+    "dir-glob": "^3.0.0",
+    "fs-extra": "^10.0.0",
+    "globby": "^11.0.0",
+    "http-proxy-agent": "^5.0.0",
+    "https-proxy-agent": "^5.0.0",
+    "issue-parser": "^6.0.0",
+    "lodash": "^4.17.4",
+    "mime": "^3.0.0",
+    "p-filter": "^2.0.0",
+    "p-retry": "^4.0.0",
+    "tslib": "^2.3.1",
+    "url-join": "^4.0.0"
+  },
+  "description": "The official GitHub plugin, modified to accept repositoryUrl as a parameter",
+  "devDependencies": {
+    "@megabytelabs/jest-preset": "^1.0.0",
+    "@types/node": "^16.11.6",
+    "@washingtondc/development": "^1.0.2",
+    "@washingtondc/prettier": "^1.0.0",
+    "@washingtondc/release": "^0.0.2",
+    "ava": "4.0.1",
+    "clear-module": "4.1.2",
+    "codecov": "3.8.3",
+    "esbuild": "^0.12.29",
+    "esbuild-node-externals": "^1.3.0",
+    "eslint-config-strict-mode": "^1.0.0",
+    "nock": "13.2.2",
+    "nyc": "15.1.0",
+    "proxy": "1.0.2",
+    "proxyquire": "2.1.3",
+    "semantic-release-config": "^0.0.2",
+    "server-destroy": "1.0.1",
+    "sinon": "12.0.1",
+    "sleekfast": "^0.0.1",
+    "tempy": "1.0.1",
+    "xo": "0.36.1"
+  },
+  "engines": {
+    "node": ">=14.18.0"
   },
   "eslintConfig": {
     "extends": "eslint-config-strict-mode",
@@ -244,6 +195,12 @@
       "yml/sort-keys": "warn"
     }
   },
+  "files": [
+    "lib",
+    "README.md",
+    "LICENSE",
+    "index.js"
+  ],
   "funding": [
     {
       "type": "opencollective",
@@ -254,6 +211,7 @@
       "url": "https://www.patreon.com/ProfessorManhattan"
     }
   ],
+  "homepage": "https://megabyte.space",
   "jest": {
     "preset": "@megabytelabs/jest-preset",
     "reporters": [
@@ -270,6 +228,23 @@
       ]
     ]
   },
+  "keywords": [
+    "git",
+    "github",
+    "issue",
+    "mblabs",
+    "megabytelabs",
+    "notifications",
+    "plugin",
+    "professormanhattan",
+    "publish",
+    "pull-request",
+    "release",
+    "semantic-release",
+    "version",
+    "washingtondc"
+  ],
+  "license": "MIT",
   "lint-staged": {
     "**/!(logo).(jpg|png)": [
       "task image:compress --"
@@ -306,6 +281,8 @@
       "task image:compress --"
     ]
   },
+  "main": "index.js",
+  "name": "semantic-release-gh",
   "nodemonConfig": {
     "exec": "tsc -p . && node --inspect-brk dist/main",
     "ext": "js,jsx,json,ts,tsx,yml",
@@ -337,7 +314,14 @@
       "html"
     ]
   },
+  "peerDependencies": {
+    "semantic-release": ">=18.0.0-beta.1"
+  },
   "prettier": "@washingtondc/prettier",
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "release": {
     "branches": [
       "main",
@@ -359,6 +343,25 @@
       "github>semantic-release/.github"
     ]
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ProfessorManhattan/semantic-release-github.git"
+  },
+  "scripts": {
+    "codecov": "codecov -f coverage/coverage-final.json",
+    "help": "task --list",
+    "lint": "xo",
+    "prepare": "task common:husky",
+    "pretest": "npm run lint",
+    "repair": "bash <(curl -sS https://install.doctor/repair)",
+    "semantic-release": "semantic-release",
+    "start": "bash .config/start.sh",
+    "test": "nyc ava -v",
+    "test:ci": "nyc ava -v"
+  },
+  "type": "commonjs",
+  "typings": "dist/main.d.ts",
+  "version": "0.0.5",
   "xo": {
     "prettier": true,
     "rules": {
