--- a/.config/taskfiles/publish/Taskfile-firefox.yml
+++ b/.config/taskfiles/publish/Taskfile-firefox.yml
@@ -2,4 +2,8 @@
 version: '3'
 
 tasks:
-  release: "true"
+  log:
+    error: Encountered error while publishing Firefox add-on
+    start: Publishing Firefox add-on
+    success: Successfully published Firefox add-on
+  release: Publishes Firefox add-on
